--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
 <p id="k"><b>"Sztuka dla sztuki" -</b> Określenie zbuntowania się idei przypisywania do sztuki tematów moralności, religi, historii lub poltyki, a następnie oceniania jej na tej podstawie. Sztuka miała być sama w sobie pięknem bez czynników zewnętrznych.</p>
 <p id="l"><b>Eros i Tantos -</b> Greccy bogowie będący symbolem śmierci i miłości. Oboje uważali, że niedługo dojdzie do końca świata, więc zanużyli się w najróżniejszych przyjemnościach. Ich symbolika przypomina podejście idei rozpusty w młodej polsce.</p>
 <p id="m"><b>Femme Fatale -</b> Kobieta prowadząca mężczyznę na zgubę oraz zdradę. Omen nieszczęścia.</p>
+<p id="n"><b>Cyganeria -</b> Nieformalna grupa ludzi, złożona zazwyczaj z artystów, których wspólną cechą jest postawa buntu wobec zastanych norm społecznych i obyczajowych</p>
+<h4>Wykonali: Mikołaj Świdowski, Norbert Krzywiński, Mateusz Brodowski, Adam Koper, Daria Kazimierczak</h4>
 </body>
 </html>
